--- a/serenity.properties
+++ b/serenity.properties
@@ -1,15 +1,15 @@
-serenity.project.name = Page Object Model Project Automation
+serenity.project.name=Page Object Model Project Automation
 webdriver.driver=chrome
-webdriver.chrome.driver =
-webdriver.base.url =
-webdriver.timeouts.implicitlywait = 10000
-webdriver.wait.for.timeout = 10000
+webdriver.chrome.driver=chromedriver.exe
+webdriver.base.url=
+webdriver.timeouts.implicitlywait=10000
+webdriver.wait.for.timeout=10000
 serenity.dry.run=FALSE
-serenity.take.screenshots = AFTER_EACH_STEP
-serenity.logging = VERBOSE
-serenity.verbose.com.mail.steps = true
-serenity.console.colors = true
-serenity.reports.show.step.details = true
-serenity.timeout = 50000
-story.timeout.in.secs = 3000
-chrome.switches = --disk-cache-dir=null;--disable-popup-blocking,--incognito;--disable-download-notification,--start-maximized,--test-type,--ignore-certificate-errors, --allow-running-insecure-content, --disable-translate, --always-authorize-plugins, --disable-extensions
+serenity.take.screenshots=AFTER_EACH_STEP
+serenity.logging=VERBOSE
+serenity.verbose.com.mail.steps=true
+serenity.console.colors=true
+serenity.reports.show.step.details=true
+serenity.timeout=50000
+story.timeout.in.secs=3000
+chrome.switches=--disk-cache-dir=null;--disable-popup-blocking,--incognito;--disable-download-notification,--start-maximized,--test-type,--ignore-certificate-errors, --allow-running-insecure-content, --disable-translate, --always-authorize-plugins, --disable-extensions
