--- a/serenity.properties
+++ b/serenity.properties
@@ -1,7 +1,7 @@
 serenity.project.name=Page Object Model Project Automation
 webdriver.driver=chrome
 webdriver.chrome.driver=chromedriver.exe
-webdriver.base.url=
+#webdriver.base.url=
 webdriver.timeouts.implicitlywait=10000
 webdriver.wait.for.timeout=10000
 serenity.dry.run=FALSE
