--- a/serenity.properties
+++ b/serenity.properties
@@ -1,6 +1,6 @@
 serenity.project.name = Page Object Model Project Automation
 webdriver.driver=chrome
-webdriver.chrome.driver =
+webdriver.chrome.driver =/Users/macbookair/Documents/chromedriver
 webdriver.base.url =
 webdriver.timeouts.implicitlywait = 10000
 webdriver.wait.for.timeout = 10000
