--- a/build.gradle
+++ b/build.gradle
@@ -32,16 +32,19 @@ dependencies {
     implementation "net.serenity-bdd:serenity-cucumber4:$rootProject.ext.serenityCucumberVersion"
     implementation "net.serenity-bdd:serenity-screenplay-webdriver:$rootProject.ext.serenityVersion"
 
-    //testImplementation group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '4.2.2'
+    implementation "org.seleniumhq.selenium:selenium-java:3.141.59"
 
-    testImplementation 'junit:junit:4.12'
     testImplementation 'org.assertj:assertj-core:3.9.0'
     testImplementation 'org.slf4j:slf4j-simple:1.7.7'
     testImplementation 'org.hamcrest:hamcrest-core:1.3'
 }
 
 test {
-    useJUnitPlatform()
+    systemProperty 'properties', System.getProperty('properties')
+}
+
+tasks.withType(Test) {
+    systemProperties = System.properties
 }
 
 gradle.startParameter.continueOnFailure = true
