Se agrega feature de compra de un producto

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,6 +1,6 @@
 serenity.project.name = Page Object Model Project Automation
 webdriver.driver=chrome
-webdriver.chrome.driver = c://chromedriver.exe
+webdriver.chrome.driver=chromedriver
 #webdriver.base.url =https://www.saucedemo.com/
 webdriver.timeouts.implicitlywait = 10000
 webdriver.wait.for.timeout = 10000
