--- a/serenity.properties
+++ b/serenity.properties
@@ -1,15 +1,20 @@
-serenity.project.name = Page Object Model Project Automation
 webdriver.driver=chrome
 webdriver.chrome.driver = c://chromedriver.exe
 #webdriver.base.url =https://www.saucedemo.com/
 webdriver.timeouts.implicitlywait = 10000
+webdriver.timeouts.fluentwait = 15000
 webdriver.wait.for.timeout = 10000
+serenity.project.name = Page Object Model Project Automation
 serenity.dry.run=FALSE
-serenity.take.screenshots = AFTER_EACH_STEP
+serenity.report.encoding=UTF-8
+serenity.take.screenshots.for.tasks=BEFORE_AND_AFTER_EACH_STEP
+serenity.take.screenshots.for.interactions=FOR_FAILURES
+serenity.take.screenshots.for.questions=BEFORE_AND_AFTER_EACH_STEP
+serenity.compress.filenames=FALSE
 serenity.logging = VERBOSE
 serenity.verbose.com.mail.steps = true
 serenity.console.colors = true
 serenity.reports.show.step.details = true
-serenity.timeout = 50000
-story.timeout.in.secs = 3000
+serenity.timeout = 10000
+feature.file.encoding=UTF-8
 chrome.switches = --disk-cache-dir=null;--disable-popup-blocking,--incognito;--disable-download-notification,--start-maximized,--test-type,--ignore-certificate-errors, --allow-running-insecure-content, --disable-translate, --always-authorize-plugins, --disable-extensions
