--- a/serenity.properties
+++ b/serenity.properties
@@ -1,6 +1,6 @@
 webdriver.driver=chrome
 webdriver.chrome.driver = c://chromedriver.exe
-#webdriver.base.url =https://www.saucedemo.com/
+webdriver.base.url =https://www.saucedemo.com/
 webdriver.timeouts.implicitlywait = 10000
 webdriver.timeouts.fluentwait = 15000
 webdriver.wait.for.timeout = 10000
